2007-06-15  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/format.py:
	* gaupol/gtk/agents/__init__.py:
	Clean up code.

2007-06-15  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/conf.spec:
	* data/glade/header-dialog.glade:
	* data/glade/insert-dialog.glade:
	* data/glade/preferences-dialog.glade:
	* gaupol/base/mutables.py:
	* gaupol/const.py:
	* gaupol/gtk/actions/edit.py:
	* gaupol/gtk/actions/format.py:
	* gaupol/gtk/agents/edit.py:
	* gaupol/gtk/agents/__init__.py:
	* gaupol/gtk/agents/open.py:
	* gaupol/gtk/dialogs/header.py:
	* gaupol/gtk/dialogs/__init__.py:
	* gaupol/gtk/dialogs/insert.py:
	* gaupol/gtk/page.py:
	* gaupol/gtk/util.py:
	* gaupol/gtk/view.py:
	* gaupol/languages.py:
	* gaupol/unittest/case.py:
	Add contracts and clean up code.

2007-06-15  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/close.py (close_page):
	Call self.update_gui.

2007-06-15  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/open.py (_try_open_file):
	Actually return None on UnicodeError.

2007-06-15  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/multiclose-dialog.glade:
	* gaupol/gtk/agents/close.py:
	* gaupol/gtk/agents/__init__.py:
	* gaupol/gtk/agents/open.py:
	* gaupol/gtk/agents/save.py:
	* gaupol/gtk/application.py:
	* gaupol/gtk/dialogs/__init__.py:
	* gaupol/gtk/dialogs/multiclose.py:
	* gaupol/gtk/unittest/case.py:
	Add contracts and clean up code.

2007-06-14  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/application.py (_init_notebook):
	Remove the border from around the notebook.

	* gaupol/gtk/page.py (_init_widgets):
	Change the tab label event box to use an invisible child window to
	remove bizarre gradients in tab label backgrounds.

2007-06-14  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/__init__.py:
	* gaupol/gtk/main.py:
	Move gtk.rc_add_default_file call to __init__.

2007-06-13  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/open.py:
	(_show_parse_error_dialog): Extend secondary text.