@@ -21,17 +21,12 @@
 
 from __future__ import with_statement
 
-import copy
+import gaupol.gtk
 import gobject
 import gtk
 import os
 import tempfile
-
-from gaupol.base import Delegate
-from gaupol.gtk import conf, util
-from gaupol.gtk.dialogs import ErrorDialog, PreviewErrorDialog
-from gaupol.gtk.i18n import _
-from gaupol.gtk.index import *
+_ = gaupol.i18n._
 
 
 class PreviewAgent(gaupol.Delegate):
@@ -40,35 +35,28 @@ class PreviewAgent(gaupol.Delegate):
 
     # pylint: disable-msg=E0203,W0201
 
-    def _clean(self, output_path, temp_path):
-        """Remove output and temporary files if they exist."""
+    @gaupol.gtk.util.asserted_return
+    def _handle_output(self, pid, return_value, output_path):
+        """Handle the output of finished preview process."""
 
-        remove = gaupol.gtk.util.silent(OSError, TypeError)(os.remove)
-        remove(output_path)
-        remove(temp_path)
-
-    def _post_process(self, pid, return_value, data):
-        """Process output of finished preview."""
-
-        output_path, temp_path = data
         with open(output_path, "r") as fobj:
             output = fobj.read()
-        self._clean(output_path, temp_path)
+        silent = gaupol.gtk.util.silent(OSError)
+        silent(os.remove)(output_path)
         self.output_window.set_output(output)
-        if return_value != 0:
-            dialog = PreviewErrorDialog(self.window, output)
-            self.flash_dialog(dialog)
+        assert return_value != 0
+        dialog = gaupol.gtk.PreviewErrorDialog(self.window, output)
+        self.flash_dialog(dialog)
 
     def _show_encoding_error_dialog(self):
         """Show an error dialog after failing to encode file."""
 
         title = _('Failed to encode subtitle file to '
             'temporary directory "%s"') % tempfile.gettempdir()
-        message = _("Subtitle data could not be encoded to a temporary "
-            "file for preview with the current character encoding. Please "
-            "first save the subtitle file with a different character "
-            "encoding.")
-        dialog = ErrorDialog(self.window, title, message)
+        message = _("Subtitle data could not be encoded to a temporary file "
+            "for preview with the current character encoding. Please first "
+            "save the subtitle file with a different character encoding.")
+        dialog = gaupol.gtk.ErrorDialog(self.window, title, message)
         dialog.add_button(gtk.STOCK_OK, gtk.RESPONSE_OK)
         self.flash_dialog(dialog)
 
@@ -78,7 +66,7 @@ class PreviewAgent(gaupol.Delegate):
         title = _('Failed to save subtitle file to '
             'temporary directory "%s"') % tempfile.gettempdir()
         message = _("%s.") % message
-        dialog = ErrorDialog(self.window, title, message)
+        dialog = gaupol.gtk.ErrorDialog(self.window, title, message)
         dialog.add_button(gtk.STOCK_OK, gtk.RESPONSE_OK)
         self.flash_dialog(dialog)
 
@@ -88,56 +76,48 @@ class PreviewAgent(gaupol.Delegate):
         page = self.get_current_page()
         rows = page.view.get_selected_rows()
         row = (rows[0] if rows else 0)
-        time = page.project.times[row][0]
-        col = page.view.get_focus()[1]
-        col = (gaupol.gtk.COLUMN.TRAN_TEXT if col == gaupol.gtk.COLUMN.TRAN_TEXT else gaupol.gtk.COLUMN.MAIN_TEXT)
-        doc = page.text_column_to_document(col)
+        time = page.project.subtitles[row].start_time
+        col = gaupol.gtk.COLUMN.MAIN_TEXT
+        if page.view.get_focus()[1] == gaupol.gtk.COLUMN.TRAN_TEXT:
+            col = gaupol.gtk.COLUMN.TRAN_TEXT
+        doc = gaupol.gtk.util.text_column_to_document(col)
         self.preview(page, time, doc)
 
     def preview(self, page, time, doc, path=None):
         """Preview from time with a video player."""
 
-        command = gaupol.gtk.conf.preview.video_player.command
-        if not gaupol.gtk.conf.preview.use_predefined:
-            command = gaupol.gtk.conf.preview.custom_command
-        offset = gaupol.gtk.conf.preview.offset
-
         try:
+            command = gaupol.gtk.conf.preview.video_player.command
+            if not gaupol.gtk.conf.preview.use_predefined:
+                command = gaupol.gtk.conf.preview.custom_command
+            offset = gaupol.gtk.conf.preview.offset
             output = page.project.preview(time, doc, command, offset, path)
-            process, command, output_path, temp_path = output
+            process, command, output_path = output
         except IOError, (no, message):
-            self._clean(output_path, temp_path)
+            silent = gaupol.gtk.util.silent(OSError)
+            silent(os.remove)(output_path)
             return self._show_io_error_dialog(message)
         except UnicodeError:
-            self._clean(output_path, temp_path)
+            silent = gaupol.gtk.util.silent(OSError)
+            silent(os.remove)(output_path)
             return self._show_encoding_error_dialog()
-
-        data = (output_path, temp_path)
+        handler = self._handle_output
         if process.poll() is not None:
-            # If the process was terminated by the time we got here,
-            # it needs to be processed manually.
-            return self._post_process(process.pid, process.returncode, data)
-        gobject.child_watch_add(process.pid, self._post_process, data)
+            return handler(process.pid, process.returncode, output_path)
+        gobject.child_watch_add(process.pid, handler, output_path)
 
     def preview_changes(self, page, row, doc, method, args=None, kwargs=None):
         """Preview changes caused by method with a video player."""
 
-        times = copy.deepcopy(page.project.times)
-        frames = copy.deepcopy(page.project.frames)
-        main_texts = copy.deepcopy(page.project.main_texts)
-        tran_texts = copy.deepcopy(page.project.tran_texts)
-
+        subtitles = [x.copy() for x in page.project.subtitles]
+        framerate = page.project.framerate
         blocked = page.project.block_all()
-        args = (args if args is not None else [])
-        kwargs = (kwargs if kwargs is not None else {})
+        kwargs = kwargs or {}
         kwargs["register"] = None
-        method(*args, **kwargs)
+        method(*(args or ()), **kwargs)
         path = page.project.get_temp_file_path(doc)
-        time = page.project.times[row][0]
+        time = page.project.subtitles[row].start_time
         page.project.unblock_all(blocked)
-
-        page.project.times = times
-        page.project.frames = frames
-        page.project.main_texts = main_texts
-        page.project.tran_texts = tran_texts
+        page.project.subtitles = subtitles
+        page.project.set_framerate(framerate, register=None)
         self.preview(page, time, doc, path)
