@@ -1,3 +1,9 @@
+2007-06-16  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
+	* gaupol/gtk/agents/__init__.py:
+	* gaupol/gtk/agents/preview.py:
+	Clean up code.
+
 2007-06-15  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
 	* gaupol/gtk/agents/format.py:
